Implement first draft yargs

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "axios": "^0.20.0",
     "cheerio": "^1.0.0-rc.3",
     "esm": "^3.2.25",
-    "inquirer": "^7.3.3"
+    "inquirer": "^7.3.3",
+    "yargs": "^16.0.3"
   },
   "bin": {
     "@yoannduc/web-scrapping-cli": "bin/web-scrapping-cli",
